# pix-cells

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REFACTOR_PLAN.md  Untitled.pixc  imgui.ini
.claude/: settings.local.json
.claude/agents/: component-reviewer.md  feature-implementer.md
.claude/commands/: update-docs.md  verify.md
.github/workflows/: release.yml
src/: CLAUDE.md  app_state.cpp  app_state.h  blend.h  canvas.h  canvas_state.cpp  cursor_manager.cpp  cursor_manager.h  icon_manager.cpp  icon_manager.h  input_handler.cpp  input_handler.h  log.cpp  log.h  main.cpp  palette_io.cpp  palette_io.h  pixc_io.cpp  pixc_io.h  png_io.cpp  png_io.h  raster.cpp  raster.h  selection.cpp  ui_scale.cpp  ui_scale.h  workbench.cpp  workbench.h
src/panels/: CLAUDE.md  canvas_overlay.cpp  canvas_overlay.h  canvas_panel.cpp  canvas_panel.h  canvas_panel_internal.h  canvas_tools.cpp  canvas_tools.h  doc_tabs_panel.cpp  doc_tabs_panel.h  file_io_context.h  layers_panel.cpp  layers_panel.h  log_panel.cpp  log_panel.h  menu_bar.cpp  menu_bar.h  palette_panel.cpp  palette_panel.h  preview_panel.cpp  preview_panel.h  timeline_panel.cpp  timeline_panel.h  tool_settings_panel.cpp  tool_settings_panel.h  tools_panel.cpp  tools_panel.h
tests/: test_blend.cpp  test_composite.cpp  test_frames.cpp  test_history.cpp  test_multidoc.cpp  test_palette_io.cpp  test_pixc.cpp  test_png_io.cpp  test_raster.cpp  test_util.h
